--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1>Not A Sketchy Website</h1>
     <hr>
     <h2>Rewind Indonesia 2020 (Song Only)</h2>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/m-LCagoW6AI?si=wiDK44Gtv5sU-zLs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/m-LCagoW6AI?si=wiDK44Gtv5sU-zLs" allowfullscreen></iframe>
     <br>
     <br>
     <h2>Rewind Indonesia 2021 (Song Only)</h2>
