--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <iframe width="560" height="315" src="https://www.youtube.com/embed/1n2NYcPlkVE?si=bDRD5J1F6mzq597d" allowfullscreen></iframe>
     <br>
     <br>
-    <iframe width="560" height="315" src="https://youtu.be/embed/QhChwIOdIRQ?si=Du9TkQW6H9zHwdce">
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/QhChwIOdIRQ?si=Du9TkQW6H9zHwdce">
 </body>
 
 </html>
